hphp/hack/test/typecheck/lambda/variadics/lambda_unpacked_parameters.php.constraint_method_call.exp
ERROR: File "lambda_unpacked_parameters.php", line 11, characters 14-24:
Invalid argument (Typing[4110])
  File "lambda_unpacked_parameters.php", line 11, characters 14-24:
  Expected `Traversable<_>` (it is unpacked with `...`)
  File "lambda_unpacked_parameters.php", line 9, characters 17-17:
  But got `int`
ERROR: File "lambda_unpacked_parameters.php", line 15, characters 14-14:
Invalid argument (Typing[4110])
  File "lambda_unpacked_parameters.php", line 14, characters 28-29:
  Expected `string` (variadic argument)
  File "lambda_unpacked_parameters.php", line 15, characters 14-14:
  But got `int`
ERROR: File "lambda_unpacked_parameters.php", line 39, characters 11-12:
Invalid argument (Typing[4110])
  File "lambda_unpacked_parameters.php", line 38, characters 25-29:
  Expected `string` or `int`
  File "lambda_unpacked_parameters.php", line 3, characters 69-70:
  But got `vec<string>` (variadic argument)
ERROR: File "lambda_unpacked_parameters.php", line 42, characters 32-34:
No instance method `foo` in `string` (Typing[4053])
  File "lambda_unpacked_parameters.php", line 3, characters 69-70:
  This is why I think it is an object of type HH\string (variadic argument)
  File "string.hhi", line 6, characters 15-20:
  Declaration of `string` is here
ERROR: File "lambda_unpacked_parameters.php", line 47, characters 16-18:
You are trying to access the method `foo` but this is an int (Typing[4062])
  File "lambda_unpacked_parameters.php", line 3, characters 24-26:
  Definition is here
